[project]
name = "pybuster"
version = "0.1.0"
description = "Hobby project similar to Gobuster, but probably slower"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "aiohttp>=3.12.15",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
