[project]
name = "pybuster"
version = "0.1.0"
description = "Hobby project similar to Gobuster, but probably slower"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.17.2",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.118.0",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
